== Jobsworth change history for new functionality and major bug fixes.

For comprehensive details of every change, please consult http://github.com/ari/jobsworth/commits/

=== Release 5.0 (pending)

* Rails upgraded to 4.2.x along with major upgrades to many gems. This resolves some security issues with running the old version of Rails now EOL.
* JRuby upgraded to 9.x with the promises of even more performance
* Support for MRI ruby versions below 2.2 is now dropped

=== Release 4.1 (October 2015)

* Fixed some issues with the war bundle containing an empty broken jar
* Projects can now have default users.
* Snippets and task templates are now sortable.
* Users can choose to make their comment private by default.


=== Release 4.0 (30 June 2015)

* IMPORTANT: environment.local.rb has been replaced by configuration options in context.xml (if you are running in a JVM) or application.yml (if you continue with MRI Ruby)
* This release has a number of Rails security patches
* Language translations throughtout the application
* New filter options
* Switch the autogrow library for a better, more reliable one
* jruby is now a first class citizen and all remaining issues with background processes are resolved
* postgresql support suffered bitrot. Thanks to the contributions from the people at Digital Natives, postgresql is now back in full support
* also thanks to Digital Natives we now have translations for the entire application into Hungarian and Hebrew. Other translations are in the process of being added
* the ability to edit and add contacts/people can be disabled in application.yml
* Travis continuous integration testing is working again
* forecast date is now in the task list
* top navigation reorganised into a simpler structure
* huge number of smaller improvements and bug fixes
* Access to Rails console and rake commands is now possible in Java environment (refer to README).

=== Release 3.1 (2 January 2013)