@@ -1,6 +1,6 @@
 Jobsworth: project management and task tracking
 
-Copyright (c) 2008-2011 ish group pty ltd (http://www.ish.com.au)
+Copyright (c) 2008-2016 ish group pty ltd (http://www.ish.com.au)
 
 
 This program is free software: you can redistribute it and/or modify
