@@ -5,8 +5,13 @@ For comprehensive details of every change, please consult http://github.com/ari/
 === Release 5.0 (pending)
 
 * Rails upgraded to 4.2.x along with major upgrades to many gems. This resolves some security issues with running the old version of Rails now EOL.
-* JRuby upgraded to 9.x with the promises of even more performance
+* Better display of milestone and task forecast dates
+* Milestone starting date
+* JRuby upgraded to 9.1 with the promises of better performance
 * Support for MRI ruby versions below 2.2 is now dropped
+* Support logstash
+* Lots of improvements to security. No known security holes existed before, but now there are more checks, explicit routes and explicit params which can be modified
+* Fix invalid timezones for some users
 
 === Release 4.1 (October 2015)
 
